--- a/index.html
+++ b/index.html
@@ -15,7 +15,18 @@
   <ion-app>
     <ion-header>
       <ion-toolbar>
+        <ion-buttons slot="start">
+          <ion-button>
+            <ion-icon name="logo-ionic"></ion-icon>
+          </ion-button>
+        </ion-buttons>
         <ion-title>Products App</ion-title>
+        <ion-buttons slot="end">
+          <ion-button>
+            <p style="margin-right: 2.5em;">Total: 30$</p>
+            <ion-icon name="cart"></ion-icon>
+          </ion-button>
+        </ion-buttons>
       </ion-toolbar>
     </ion-header>
   </ion-app>
