--- a/index.html
+++ b/index.html
@@ -29,6 +29,31 @@
         </ion-buttons>
       </ion-toolbar>
     </ion-header>
+
+    <ion-content>
+      <ion-grid>
+        <ion-row>
+          <ion-col>
+            <ion-card>
+              <ion-card-header>
+                <ion-card-title>
+                  New Product
+                </ion-card-title>
+              </ion-card-header>
+              <ion-card-content>
+                <ion-item>
+                  <ion-label position="floating">
+                    Product Name
+                  </ion-label>
+                  <ion-input type="text"></ion-input>
+                </ion-item>
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-content>
+
   </ion-app>
 
   <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.esm.js"></script>
