--- a/index.html
+++ b/index.html
@@ -41,12 +41,24 @@
                 </ion-card-title>
               </ion-card-header>
               <ion-card-content>
-                <ion-item>
+                <ion-item class="ion-margin-vertical">
                   <ion-label position="floating">
                     Product Name
                   </ion-label>
                   <ion-input type="text"></ion-input>
                 </ion-item>
+                      <ion-item>
+                  <ion-label position="floating">
+                    Product Price
+                  </ion-label>
+                  <ion-input type="number"></ion-input>
+                </ion-item>
+                <ion-button color="success">
+                  <ion-icon name="add-circle" slot="start"></ion-icon>Save
+                </ion-button>
+                <ion-button color="danger" fill="outline">
+                  <ion-icon name="trash" slot="start"></ion-icon>Clear
+                </ion-button>
               </ion-card-content>
             </ion-card>
           </ion-col>
