--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 
   <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.esm.js"></script>
   <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.js"></script>
+  <script src="./app.js"></script>
 </body>
 
 </html>
