--- a/index.html
+++ b/index.html
@@ -1,76 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <title>Ionic App</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="css/style.css" rel="stylesheet" />
 
-<head>
-  <title>Ionic App</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="css/style.css" rel="stylesheet">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@ionic/core/css/ionic.bundle.css"
+    />
+  </head>
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core/css/ionic.bundle.css" />
-</head>
+  <body>
+    <ion-app>
+      <ion-header>
+        <ion-toolbar color="primary">
+          <ion-buttons slot="start">
+            <ion-button>
+              <ion-icon name="logo-ionic"></ion-icon>
+            </ion-button>
+          </ion-buttons>
+          <ion-title>Products App</ion-title>
+          <ion-buttons slot="end">
+            <ion-button>
+              <p style="margin-right: 2.5em">Total: 30$</p>
+              <ion-icon name="cart"></ion-icon>
+            </ion-button>
+          </ion-buttons>
+        </ion-toolbar>
+      </ion-header>
 
-<body>
+      <ion-content>
+        <ion-grid>
+          <ion-row>
+            <ion-col>
+              <ion-card color="warning">
+                <ion-card-header color="secondary">
+                  <ion-card-title> New Product </ion-card-title>
+                </ion-card-header>
+                <ion-card-content>
+                  <ion-item class="ion-margin-vertical">
+                    <ion-label position="floating" style="margin: 8px">Product Name</ion-label>
+                    <ion-input
+                      type="text"
+                      id="productName"
+                    ></ion-input>
+                  </ion-item>
+                  <ion-item>
+                    <ion-label position="floating" style="margin: 8px">Product Price</ion-label>
+                    <ion-input
+                      type="number"
+                      id="productPrice"
+                    ></ion-input>
+                  </ion-item>
+                  <ion-button color="success" id="button-save">
+                    <ion-icon name="add-circle" slot="start"></ion-icon>Save
+                  </ion-button>
+                  <ion-button color="danger" fill="outline" id="button">
+                    <ion-icon name="trash" slot="start"></ion-icon>Clear
+                  </ion-button>
+                </ion-card-content>
+              </ion-card>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-content>
+    </ion-app>
 
-  <ion-app>
-    <ion-header>
-      <ion-toolbar color="primary">
-        <ion-buttons slot="start">
-          <ion-button>
-            <ion-icon name="logo-ionic"></ion-icon>
-          </ion-button>
-        </ion-buttons>
-        <ion-title>Products App</ion-title>
-        <ion-buttons slot="end">
-          <ion-button>
-            <p style="margin-right: 2.5em;">Total: 30$</p>
-            <ion-icon name="cart"></ion-icon>
-          </ion-button>
-        </ion-buttons>
-      </ion-toolbar>
-    </ion-header>
-
-    <ion-content>
-      <ion-grid>
-        <ion-row>
-          <ion-col>
-            <ion-card color="warning">
-              <ion-card-header color="secondary">
-                <ion-card-title>
-                  New Product
-                </ion-card-title>
-              </ion-card-header>
-              <ion-card-content>
-                <ion-item class="ion-margin-vertical">
-                  <ion-label position="floating">
-                    Product Name
-                  </ion-label>
-                  <ion-input type="text" id="productName"></ion-input>
-                </ion-item>
-                      <ion-item>
-                  <ion-label position="floating">
-                    Product Price
-                  </ion-label>
-                  <ion-input type="number" id="productPrice"></ion-input>
-                </ion-item>
-                <ion-button color="success" id="button-save">
-                  <ion-icon name="add-circle" slot="start"></ion-icon>Save
-                </ion-button id="button-cancel">
-                <ion-button color="danger" fill="outline">
-                  <ion-icon name="trash" slot="start"></ion-icon>Clear
-                </ion-button>
-              </ion-card-content>
-            </ion-card>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-    </ion-content>
-
-  </ion-app>
-
-  <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.esm.js"></script>
-  <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.js"></script>
-  <script src="./app.js"></script>
-</body>
-
+    <script
+      type="module"
+      src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.js"
+    ></script>
+    <script src="./app.js"></script>
+  </body>
 </html>
