--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
       <ion-content>
         <ion-grid>
           <ion-row>
+            <ion-row id="product-list">
+            </ion-row>
             <ion-col>
               <ion-card color="warning">
                 <ion-card-header color="secondary">
