--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="css/style.css" rel="stylesheet" />
-
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@ionic/core/css/ionic.bundle.css"
     />
   </head>
-
   <body>
     <ion-app>
       <ion-header>
@@ -30,46 +28,41 @@
           </ion-buttons>
         </ion-toolbar>
       </ion-header>
-
       <ion-content>
-        <ion-grid>
-          <ion-row>
-            <ion-row id="product-list">
-            </ion-row>
-            <ion-col>
-              <ion-card color="warning">
-                <ion-card-header color="secondary">
-                  <ion-card-title> New Product </ion-card-title>
-                </ion-card-header>
-                <ion-card-content>
-                  <ion-item class="ion-margin-vertical">
-                    <ion-label position="floating" style="margin: 8px">Product Name</ion-label>
-                    <ion-input
-                      type="text"
-                      id="productName"
-                    ></ion-input>
-                  </ion-item>
-                  <ion-item>
-                    <ion-label position="floating" style="margin: 8px">Product Price</ion-label>
-                    <ion-input
-                      type="number"
-                      id="productPrice"
-                    ></ion-input>
-                  </ion-item>
-                  <ion-button color="success" id="button-save">
-                    <ion-icon name="add-circle" slot="start"></ion-icon>Save
-                  </ion-button>
-                  <ion-button color="danger" fill="outline" id="button">
-                    <ion-icon name="trash" slot="start"></ion-icon>Clear
-                  </ion-button>
-                </ion-card-content>
-              </ion-card>
-            </ion-col>
-          </ion-row>
-        </ion-grid>
-      </ion-content>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="12">
+        <ion-list id="product-list"></ion-list>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="12">
+        <ion-card color="warning">
+          <ion-card-header color="secondary">
+            <ion-card-title> New Product </ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+            <ion-item class="ion-margin-vertical">
+              <ion-label position="floating">Product Name</ion-label>
+              <ion-input type="text" id="productName"></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-label position="floating">Product Price</ion-label>
+              <ion-input type="number" id="productPrice"></ion-input>
+            </ion-item>
+            <ion-button color="success" id="button-save">
+              <ion-icon name="add-circle" slot="start"></ion-icon>Save
+            </ion-button>
+            <ion-button color="danger" fill="outline" id="button">
+              <ion-icon name="trash" slot="start"></ion-icon>Clear
+            </ion-button>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+</ion-content>
     </ion-app>
-
     <script
       type="module"
       src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.esm.js"
