--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <ion-title>Products App</ion-title>
           <ion-buttons slot="end">
             <ion-button>
-              <p style="margin-right: 2.5em">Total: 30$</p>
+              <p style="margin-right: 0.5rem">Total: 30$</p>
               <ion-icon name="cart"></ion-icon>
             </ion-button>
           </ion-buttons>
