--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <ion-button color="success" id="button-save">
               <ion-icon name="add-circle" slot="start"></ion-icon>Save
             </ion-button>
-            <ion-button color="danger" fill="outline" id="button">
+            <ion-button color="danger" fill="outline" id="button-cancel">
               <ion-icon name="trash" slot="start"></ion-icon>Clear
             </ion-button>
           </ion-card-content>
