--- a/index.html
+++ b/index.html
@@ -14,54 +14,49 @@
     <ion-app>
       <ion-header>
         <ion-toolbar color="primary">
-          <ion-buttons slot="start">
-            <ion-button>
-              <ion-icon name="logo-ionic"></ion-icon>
-            </ion-button>
-          </ion-buttons>
-          <ion-title>Products App</ion-title>
+          <ion-title>Products</ion-title>
           <ion-buttons slot="end">
             <ion-button>
-              <p style="margin-right: 0.5rem">Total: 30$</p>
+              <p style="margin-right: 0.5rem">Total: <span id="total">0</span>$</p>
               <ion-icon name="cart"></ion-icon>
             </ion-button>
           </ion-buttons>
         </ion-toolbar>
       </ion-header>
       <ion-content>
-  <ion-grid>
-    <ion-row>
-      <ion-col size="12">
-        <ion-list id="product-list"></ion-list>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col size="12">
-        <ion-card color="warning">
-          <ion-card-header color="secondary">
-            <ion-card-title> New Product </ion-card-title>
-          </ion-card-header>
-          <ion-card-content>
-            <ion-item class="ion-margin-vertical">
-              <ion-label position="floating">Product Name</ion-label>
-              <ion-input type="text" id="productName"></ion-input>
-            </ion-item>
-            <ion-item>
-              <ion-label position="floating">Product Price</ion-label>
-              <ion-input type="number" id="productPrice"></ion-input>
-            </ion-item>
-            <ion-button color="success" id="button-save">
-              <ion-icon name="add-circle" slot="start"></ion-icon>Save
-            </ion-button>
-            <ion-button color="danger" fill="outline" id="button-cancel">
-              <ion-icon name="trash" slot="start"></ion-icon>Clear
-            </ion-button>
-          </ion-card-content>
-        </ion-card>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-</ion-content>
+        <ion-grid>
+          <ion-row>
+            <ion-col size="12">
+              <ion-list id="product-list"></ion-list>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col size="12">
+              <ion-card color="warning">
+                <ion-card-header color="secondary">
+                  <ion-card-title> New Product </ion-card-title>
+                </ion-card-header>
+                <ion-card-content>
+                  <ion-item class="ion-margin-vertical">
+                    <ion-label position="floating">Product Name</ion-label>
+                    <ion-input type="text" id="productName"></ion-input>
+                  </ion-item>
+                  <ion-item>
+                    <ion-label position="floating">Product Price</ion-label>
+                    <ion-input type="number" id="productPrice"></ion-input>
+                  </ion-item>
+                  <ion-button color="success" id="button-save">
+                    <ion-icon name="add-circle" slot="start"></ion-icon>Save
+                  </ion-button>
+                  <ion-button color="danger" fill="outline" id="button-cancel">
+                    <ion-icon name="trash" slot="start"></ion-icon>Clear
+                  </ion-button>
+                </ion-card-content>
+              </ion-card>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-content>
     </ion-app>
     <script
       type="module"
