--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <ion-app>
       <ion-header>
         <ion-toolbar color="primary">
-          <ion-title>Products</ion-title>
+          <ion-title>Productos</ion-title>
           <ion-buttons slot="end">
             <ion-button>
               <p style="margin-right: 0.5rem">Total: <span id="total">0</span>$</p>
@@ -34,22 +34,22 @@
             <ion-col size="12">
               <ion-card color="warning">
                 <ion-card-header color="secondary">
-                  <ion-card-title> New Product </ion-card-title>
+                  <ion-card-title> Nuevo Producto </ion-card-title>
                 </ion-card-header>
                 <ion-card-content>
                   <ion-item class="ion-margin-vertical">
-                    <ion-label position="floating">Product Name</ion-label>
+                    <ion-label position="floating">Nombre:</ion-label>
                     <ion-input type="text" id="productName"></ion-input>
                   </ion-item>
                   <ion-item>
-                    <ion-label position="floating">Product Price</ion-label>
+                    <ion-label position="floating">Precio:</ion-label>
                     <ion-input type="number" id="productPrice"></ion-input>
                   </ion-item>
                   <ion-button color="success" id="button-save">
-                    <ion-icon name="add-circle" slot="start"></ion-icon>Save
+                    <ion-icon name="add-circle" slot="start"></ion-icon>Agregar
                   </ion-button>
                   <ion-button color="danger" fill="outline" id="button-cancel">
-                    <ion-icon name="trash" slot="start"></ion-icon>Clear
+                    <ion-icon name="trash" slot="start"></ion-icon>Limpiar
                   </ion-button>
                 </ion-card-content>
               </ion-card>
