--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="https://cdn.jsdelivr.net/npm/@ionic/core/css/ionic.bundle.css"
     />
   </head>
+
   <body>
     <ion-app>
       <ion-header>
@@ -17,8 +18,11 @@
           <ion-title>Productos</ion-title>
           <ion-buttons slot="end">
             <ion-button>
-              <p style="margin-right: 0.5rem">Total: <span id="total">0</span>$</p>
               <ion-icon name="cart"></ion-icon>
+              <p style="margin-left: 0.5rem">
+                <span id="total">0</span>$
+              </p>
+
             </ion-button>
           </ion-buttons>
         </ion-toolbar>
@@ -30,24 +34,31 @@
               <ion-list id="product-list"></ion-list>
             </ion-col>
           </ion-row>
+
           <ion-row>
             <ion-col size="12">
               <ion-card color="warning">
                 <ion-card-header color="secondary">
                   <ion-card-title> Nuevo Producto </ion-card-title>
                 </ion-card-header>
+
                 <ion-card-content>
-                  <ion-item class="ion-margin-vertical">
-                    <ion-label position="floating">Nombre:</ion-label>
-                    <ion-input type="text" id="productName"></ion-input>
+                  <ion-item class="ion-margin">
+                    <ion-label>Nombre: </ion-label>
+
+                    <ion-input type="text" id="productName" style="margin-left: 5px"></ion-input>
                   </ion-item>
-                  <ion-item>
-                    <ion-label position="floating">Precio:</ion-label>
-                    <ion-input type="number" id="productPrice"></ion-input>
+
+                  <ion-item class="ion-margin">
+                    <ion-label>Precio: </ion-label>
+
+                    <ion-input type="number" id="productPrice" style="margin-left: 5px"></ion-input>
                   </ion-item>
+
                   <ion-button color="success" id="button-save">
                     <ion-icon name="add-circle" slot="start"></ion-icon>Agregar
                   </ion-button>
+
                   <ion-button color="danger" fill="outline" id="button-cancel">
                     <ion-icon name="trash" slot="start"></ion-icon>Limpiar
                   </ion-button>
