--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
           <ion-buttons slot="end">
             <ion-button>
               <ion-icon name="cart"></ion-icon>
-              <p style="margin-left: 0.5rem">
-                <span id="total">0</span>$
+              <p style="margin-left: 0.5rem">$
+                <span id="total">0</span>
               </p>
 
             </ion-button>
@@ -43,16 +43,16 @@
                 </ion-card-header>
 
                 <ion-card-content>
-                  <ion-item class="ion-margin">
+                  <ion-item class="ion-margin-vertical">
                     <ion-label>Nombre: </ion-label>
 
-                    <ion-input type="text" id="productName" style="margin-left: 5px"></ion-input>
+                    <ion-input type="text" id="productName" style="margin-left: 3px"></ion-input>
                   </ion-item>
 
-                  <ion-item class="ion-margin">
+                  <ion-item class="ion-margin-vertical">
                     <ion-label>Precio: </ion-label>
 
-                    <ion-input type="number" id="productPrice" style="margin-left: 5px"></ion-input>
+                    <ion-input type="number" id="productPrice" style="margin-left: 3px"></ion-input>
                   </ion-item>
 
                   <ion-button color="success" id="button-save">
