--- a/index.html
+++ b/index.html
@@ -39,20 +39,22 @@
             <ion-col size="12">
               <ion-card color="warning">
                 <ion-card-header color="secondary">
-                  <ion-card-title> Nuevo Producto </ion-card-title>
+                  <ion-card-title> Lista de Compras </ion-card-title>
                 </ion-card-header>
 
                 <ion-card-content>
                   <ion-item class="ion-margin-vertical">
-                    <ion-label>Nombre: </ion-label>
+                    <ion-label>Producto: </ion-label>
 
-                    <ion-input type="text" id="productName" style="margin-left: 3px"></ion-input>
+                    <ion-input type="text" id="productName" placeholder="Ingresa nombre" style="margin-left: 3px"></ion-input>
                   </ion-item>
 
                   <ion-item class="ion-margin-vertical">
                     <ion-label>Precio: </ion-label>
 
-                    <ion-input type="number" id="productPrice" style="margin-left: 3px"></ion-input>
+
+
+                    <ion-input type="number" id="productPrice" placeholder="Sólo números" style="margin-left: 3px"></ion-input>
                   </ion-item>
 
                   <ion-button color="success" id="button-save">
