--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <ion-app>
     <ion-header>
       <ion-toolbar color="primary">
-        <ion-title>Productos</ion-title>
+        <ion-title>Lista de Compras</ion-title>
         <ion-buttons slot="end">
           <ion-button>
             <ion-icon name="cart"></ion-icon>
@@ -33,7 +33,7 @@
           <ion-col size="12">
             <ion-card color="warning">
               <ion-card-header color="secondary">
-                <ion-card-title> Lista de Compras </ion-card-title>
+                <ion-card-title style=color:white>Nuevo Producto</ion-card-title>
               </ion-card-header>
               <ion-card-content>
                 <ion-item class="ion-margin-vertical">
