--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Ionic App</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link href="css/style.css" rel="stylesheet" />
+  <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core/css/ionic.bundle.css" />
 </head>
 <body>
@@ -49,7 +49,7 @@
                 <ion-button color="success" id="button-save">
                   <ion-icon name="add-circle" slot="start"></ion-icon>Agregar
                 </ion-button>
-                <ion-button color="danger" fill="outline" id="button-cancel">
+                <ion-button color="danger" id="button-cancel">
                   <ion-icon name="trash" slot="start"></ion-icon>Limpiar
                 </ion-button>
               </ion-card-content>
