--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <ion-content>
       <ion-grid>
         <ion-row>
-          <ion-col size-md="6" size-lg="6" size-xs="12">
+          <ion-col size-md="6" size-lg="6" size-xs="12" offset-md="3">
             <!-- Columna para el formulario -->
             <ion-card color="warning">
               <ion-card-header color="primary" style="color: #f8f9fa;">
@@ -53,7 +53,7 @@
               </ion-card-content>
             </ion-card>
           </ion-col>
-          <ion-col size-md="6" size-lg="6" size-xs="12">
+          <ion-col size-md="6" size-lg="6" size-xs="12" offset-md="3">
             <!-- Columna para la lista de productos -->
             <ion-card>
               <ion-card-header color="tertiary">
