agrego icono ionic

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <ion-app>
     <ion-header>
       <ion-toolbar color="primary">
+        <ion-buttons slot="start">
+          <ion-icon name="logo-ionic"></ion-icon>
+        </ion-buttons>
         <ion-title>Lista de Compras</ion-title>
         <ion-buttons slot="end">
             <ion-icon name="cart"></ion-icon>
